--- a/data/settings.json
+++ b/data/settings.json
@@ -5,8 +5,8 @@
     "blog": "",
     "url": "http://gdgstrasbourg.fr/"
   },
-  "startDate": "2020-10-013T09:00:00+03:00",
-  "endDate": "2020-10-14T19:00:00+03:00",
+  "startDate": "2020-10-06T09:00:00+03:00",
+  "endDate": "2020-10-6T19:00:00+03:00",
   "webapp": {
     "shortName": "DevFest",
     "themeColor": "#673AB7",
@@ -31,7 +31,7 @@
   ],
   "heroSettings": {
     "home": {
-      "description": "Join the commuity, learn new things!",
+      "description": "Campus CCI Strasbourg",
       "background": {
         "color": "#673ab7",
         "image": "/images/backgrounds/home.jpg"
