changing mail contact info

--- a/data/settings.json
+++ b/data/settings.json
@@ -168,7 +168,7 @@
       }
     ]
   },
-  "mailto": "devfest@gdg.org.ua",
+  "mailto": "contact@gdgstrasbourg.fr",
   "signInProviders": {
     "providersData": [
       {
