Changed year, added COVID message

--- a/data/settings.json
+++ b/data/settings.json
@@ -29,11 +29,6 @@
       "label": "L'Equipe"
     },
     {
-      "route": "sustainability",
-      "permalink": "/sustainability",
-      "label": "Environnement"
-    },
-    {
       "route": "coc",
       "permalink": "/coc",
       "label": "Code De Conduite"
@@ -42,6 +37,7 @@
   "heroSettings": {
     "home": {
       "description": "Campus CCI Strasbourg",
+      "covidMessage": "Quoi qu'il arrive, en présentiel ou en ligne",
       "background": {
         "color": "#673ab7",
         "image": "/images/backgrounds/home.jpg"
